--- a/payment.html
+++ b/payment.html
@@ -112,6 +112,6 @@
     <input type="number" placeholder="CVV">
   </div>
   <!-- Submit Button -->
-  <input type="submit" value="Submit">
+  <input type="submit" value=href=./done.html>
 </form> </body>
 </html>
